testdata/baselines/reference/submodule/conformance/jsDeclarationsJson.errors.txt
index.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (1 errors) ====
    const j = require("./obj.json");
    module.exports = j;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
==== obj.json (0 errors) ====
    {
        "x": 12,
        "y": 12,
        "obj": {
            "items": [{"x": 12}, {"x": 12, "y": 12}, {"x": 0}, {"x": -1, "err": true}]
        }
    }